--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "daisyui": "^4.12.2",
     "postcss": "^8.4.25",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.4.4"
   },
   "scripts": {
     "dev": "npx tailwindcss -i ./src/input.css -o ./build/css/tailwind.css --watch"
